tests/ui/feature-gates/feature-gate-unnamed_fields.stderr
error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:3:5
   |
LL |     _: union {
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:3:8
   |
LL |       _: union {
   |  ________^
LL | |
LL | |
LL | |         bar: u8,
LL | |         baz: u16
LL | |     }
   | |_____^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:13:5
   |
LL |     _: struct {
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:13:8
   |
LL |       _: struct {
   |  ________^
LL | |
LL | |
LL | |         foobaz: u8,
LL | |         barbaz: u16
LL | |     }
   | |_____^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:23:5
   |
LL |     _: S
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable

error: anonymous unions are unimplemented
  --> $DIR/feature-gate-unnamed_fields.rs:3:8
   |
LL |       _: union {
   |  ________^
LL | |
LL | |
LL | |         bar: u8,
LL | |         baz: u16
LL | |     }
   | |_____^

error: anonymous structs are unimplemented
  --> $DIR/feature-gate-unnamed_fields.rs:13:8
   |
LL |       _: struct {
   |  ________^
LL | |
LL | |
LL | |         foobaz: u8,
LL | |         barbaz: u16
LL | |     }
   | |_____^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
